# Electronic

./: .gitignore  .gitmodules  LICENSE  README.md
api/: README.md
api/auth_service/v1/: auth_service.proto
api/project_service/v1/: project_service.proto
app/: .clang-format  CMakeLists.txt  Makefile  README.md
app/cmake/: Config.cmake
app/src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
app/src/services/: auth_service.cpp  auth_service.hpp
app/src/widgets/: auth_widget.cpp  auth_widget.hpp  login_widget.cpp  login_widget.hpp  profile_widget.cpp  profile_widget.hpp  registration_widget.cpp  registration_widget.hpp  widgets.hpp
microservices/: README.md
microservices/auth_service/: .clang-format  CMakeLists.txt  Makefile  Makefile.local  README.md
microservices/auth_service/configs/: config_vars.testing.yaml  config_vars.yaml  dynamic_config_fallback.json  static_config.yaml
microservices/auth_service/postgresql/schemas/: db_1.sql
microservices/auth_service/src/: auth.cpp  auth.hpp  auth_client.cpp  auth_client.hpp  auth_service.cpp  auth_service.hpp  main.cpp
microservices/auth_service/tests/: conftest.py  test_auth.py
microservices/project_service/: CMakeLists.txt  Makefile  README.md
microservices/project_service/cmake/: Config.cmake
microservices/project_service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
microservices/project_service/src/: auth_client.cpp  auth_client.hpp  main.cpp  project_service.cpp  project_service.hpp
microservices/project_service/tests/: conftest.py  test_project.py
(+7 files in other folders)
